# final-project-6450

./: .gitignore  README.md  _quarto.yml  cluster-config.txt  cluster-ips.txt  pyproject.toml  spark-cluster-key-1777064937.pem  spark-cluster-key-1777337151.pem  ssh_to_master_node.sh
docs/: conclusion.qmd  data-and-method.qmd  eda.qmd  index.qmd  ml.qmd  nlp.qmd
docs/_site/: search.json
notes/: phase5_feature_base_table.md  project_notes.md
outputs/eda_section1/: all_subreddit_counts.csv  controversy_rate_by_subreddit.csv  subset_row_counts.txt  text_subreddit_counts.csv  text_user_subreddit_counts.csv  user_subreddit_counts.csv
outputs/eda_section2/: controversy_by_hour.csv  controversy_by_month.csv  controversy_by_weekday.csv  controversy_over_time_by_subreddit.csv
outputs/eda_section3/: cross_community_over_time.csv  subreddit_pair_counts.csv  subreddit_user_type_summary.csv  user_type_comment_summary.csv  user_type_counts.csv  user_type_user_summary.csv
outputs/eda_section4/: text_length_by_controversy.csv  text_length_by_subreddit.csv  top_terms_by_controversy.csv  top_terms_by_subreddit.csv  top_terms_by_user_type.csv
outputs/ml_analysis/: logreg_confusion_counts.csv  logreg_feature_coefficients.csv  ml_analysis_notes.txt  (+3 more)
scripts/: build_feature_base_v1.py  eda_1_prep_analysis_subsets.py  eda_2_controversy_and_time.py  eda_3_cross_community_behavior.py  eda_4_text_descriptives.py  explore_filtered_comments.py  filter_selected_subreddits.py  list_subreddits.py  ml_analysis.py  ml_prep_model_base.py  nlp_analysis.py  nlp_prep_text_base.py
(+18 files in other folders)
