[project]
name = "lab-spark-nlp"
version = "0.1.0"
description = "Spark NLP lab using distributed Spark cluster on AWS EC2"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4.0,<3.5.0",
    "spark-nlp>=5.1.3",
    "boto3>=1.28.0",
    "pandas>=2.0.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "awscli>=1.42.35",
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "pyarrow>=21.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.ipynb",
    "*.md",
    "*.csv",
    "*.txt",
]
